Fix flexbox display on safari (8.0.4)

--- a/app/assets/stylesheets/local/collections.scss
+++ b/app/assets/stylesheets/local/collections.scss
@@ -14,6 +14,12 @@ $collection-index-box-margin: 17px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -webkit-justify-content: center;
+
     margin: -1 * $collection-index-box-margin; /* negate flex-item margins on outer border */
 
     .collection {
